[tool.poetry]
name = "pymeter"
version = "0.1.0"
description = ""
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = 'README.md'

packages = [
    { include = "pymeter" },
    { include = "pymeter/**/*.py" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
jsonpath = "0.82"
orjson = "3.8.10"
xmltodict = "0.13.0"
sqlalchemy = "1.4.47"
cx-Oracle = "8.3.0"
mysql-connector-python = "8.0.32"
psycopg2-binary = "2.9.6"
pyodbc = "4.0.39"
sshtunnel = "0.4.0"
pycryptodome = "3.17"
python-engineio = "4.4.0"
python-socketio = "5.8.0"
requests="2.28.2"
httpx = "0.24.0"
pytypes = "1.0b10"
ulid-py = "1.1.0"
bidict = "0.22.1"
tabulate = "0.9.0"
gevent = "22.10.2"
uvloop = "0.17.0"
loguru = "0.7.0"

[tool.poetry.dev-dependencies]
flask = "*"
pytest = "*"
pytest-html = "*"
flake8 = "*"
yapf = "*"
isort = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "pycharm"
line_length = 120
force_single_line = true
multi_line_output = 3

#[tool.yapf]
#BASED_ON_STYLE = "google"
#ARITHMETIC_PRECEDENCE_INDICATION = true
#BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
#BLANK_LINES_BETWEEN_TOP_LEVEL_IMPORTS_AND_VARIABLES = 2
#COLUMN_LIMIT = 120
#COALESCE_BRACKETS = true
#DEDENT_CLOSING_BRACKETS = true
#INDENT_WIDTH = 4
#JOIN_MULTIPLE_LINES = true
#SPACES_BEFORE_COMMENT = 2
#SPLIT_BEFORE_DOT = true

#[tool.yapfignore]
#ignore_patterns = [
#  "temp/**/*.py"
#]
