[tool.poetry]
name = "pymeter"
version = "0.1.0"
description = ""
authors = ["Kelvin.Ye <testmankelvin@163.com>"]
readme = 'README.md'

packages = [
    { include = "pymeter" },
    { include = "pymeter/**/*.py" }
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.8"
jsonpath = "0.82"
orjson = "3.9.4"
xmltodict = "0.13.0"
sqlalchemy = "2.0.19"
cx-Oracle = "8.3.0"
mysql-connector-python = "8.1.0"
psycopg2-binary = "2.9.7"
pyodbc = "4.0.39"
sshtunnel = "0.4.0"
pycryptodome = "3.18.0"
python-engineio = "4.5.1"
python-socketio = "5.8.0"
httpx = "0.24.1"
pytypes = "1.0b10"
ulid-py = "1.1.0"
bidict = "0.22.1"
tabulate = "0.9.0"
gevent = "23.7.0"
uvloop = "0.17.0"
loguru = "0.7.0"
arrow = "1.2.3"
faker = "19.3.0"

[tool.poetry.group.dev.dependencies]
flask = "*"
pytest = "*"
pytest-html = "*"
types-orjson = "*"
ruff = "*"
yapf = "*"
black = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["pymeter"]
select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "E",    # pycodestyle-error
    "W",    # pycodestyle-warning
    "D",    # pydocstyle
    "I",    # isort
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D212",
    "D403",
    "D415"
]
exclude = [
    "__pycache__/",
    ".cache/",
    ".git/",
    "*.log"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-local-folder = ["pymeter"]
force-single-line = true
lines-after-imports = 2

[tool.yapf]
column_limit = 120
indent_width = 4
arithmetic_precedence_indication = true
blank_line_before_nested_class_or_def = true
blank_lines_between_top_level_imports_and_variables = 2
coalesce_brackets = true
dedent_closing_brackets = true
join_multiple_lines = true
spaces_before_comment = 2
split_before_dot = true
