[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymeter"
readme = "README.md"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
authors = [
    "Kelvin.Ye <testmankelvin@163.com>"
]
packages = [
    { include = "pymeter" },
    { include = "pymeter/**/*.py" }
]
classifiers = [
    "Programming Language :: Python"
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "3.9.10"
jsonpath = "0.82.2"
xmltodict = "0.13.0"
sqlalchemy = "2.0.23"
pyodbc = "5.0.1"
cx-oracle = "8.3.0"
psycopg2-binary = "2.9.9"
mysql-connector-python = "8.2.0"
sshtunnel = "0.4.0"
pycryptodome = "3.19.0"
python-engineio = "4.8.0"
python-socketio = "5.10.0"
ulid-py = "1.1.0"
arrow = "1.3.0"
faker = "20.1.0"
httpx = "0.25.1"
json5 = "0.9.14"
bidict = "0.22.1"
loguru = "0.7.2"
gevent = "23.9.1"
uvloop = "0.19.0"
pytypes = "1.0b10"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
flask = "*"
pytest = "*"
pytest-html = "*"
ruff = "*"
yapf = "*"
black = "*"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["pymeter"]
select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "E",    # pycodestyle-error
    "W",    # pycodestyle-warning
    "D",    # pydocstyle
    "I",    # isort
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205",
    "D212",
    "D403",
    "D415"
]
exclude = [
    ".git/",
    ".cache/",
    "__pycache__/",
    "*.log"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-local-folder = ["pymeter"]
force-single-line = true
lines-after-imports = 2

[tool.yapf]
column_limit = 120
indent_width = 4
arithmetic_precedence_indication = true
blank_line_before_nested_class_or_def = true
blank_lines_between_top_level_imports_and_variables = 2
coalesce_brackets = true
dedent_closing_brackets = true
join_multiple_lines = true
spaces_before_comment = 2
split_before_dot = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
    "--color=auto",
    "--capture=tee-sys",
    "--code-highlight=yes",
    "--disable-warnings",
    "--html=report.html",
    "--self-contained-html"
]
log_cli = true
log_level = "DEBUG"
log_format = "[%(asctime)s][%(levelname)s][%(name)s.%(funcName)s:%(lineno)d] %(message)s"
filterwarnings = ["error", "ignore::DeprecationWarning"]
required_plugins = ["pytest-html"]
